--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ li{
 .margin{
     display: flex;
     justify-content: center;
-    margin: 200px;
+    padding: 180px;
 }
 
 .back-border{
@@ -37,7 +37,7 @@ header{
     justify-content: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 30px;
-    margin-top: 50px;
+    padding: 50px;
     color: black;
 }
 header:hover{
